# MedDSAgent-Core

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  run_note.md  tsconfig.eslint.json  tsconfig.json
.github/workflows/: ci.yml
docs/: in-process-api.md  worker-protocol.md
medds_agent/: __init__.py  agents.py  cli.py  database.py  document_parser.py  engines.py  history.py  job_manager.py  manager.py  memory.py  server.py  tools.py  utils.py  worker_entry.py  worker_handlers.py  workers.py
medds_agent/asset/: database_queries.sql
medds_agent/asset/prompt_templates/: AgentStep_toolcall_prompt_template.md  IndexedMemory_compress_prompt_template.md  System_prompt_template.md  (+2 more)
prompts/: System_prompt_template.md
prompts/specialty/: Biostatistics_Medical_Outcomes_Research.md
python_worker/: __init__.py  base.py  entry.py  handlers.py  requirements.txt
r_worker/: README.md  entry.R  handler.R
scripts/: copy-prompts.mjs
src/: index.ts
src/agents/: index.ts
src/cli/: index.ts
src/db/: index.ts  schema.sql
src/engines/: index.ts
src/history/: index.ts
src/jobs/: index.ts
src/memory/: index.ts
src/server/: index.ts  types.ts
src/session/: index.ts
src/tools/: filesystem.ts  index.ts  python.ts
src/util/: prompts.ts
src/workers/: WorkerProcess.ts
tests/: agents.test.ts  cli.test.ts  db.test.ts  engines.test.ts  filesystem.test.ts  history.test.ts  jobs.test.ts  memory.test.ts  prompts.test.ts  rworker.test.ts  scaffold.test.ts  server.test.ts  workers.test.ts
(+8 files in other folders)
